--- a/style.css
+++ b/style.css
@@ -54,7 +54,12 @@ label {
 
 .carre:focus {  
     border-color: rgb(0, 0, 160);   
-}  
+} 
+
+.button-contener{
+    display: flex;
+    justify-content: center;
+}
 
 .p {  
     display: flex;
@@ -62,7 +67,7 @@ label {
     justify-content: center;/*this it  to put the content in the middle*/ 
     align-items: center;/*to be  corrected*/
     padding: 12px;   
-    background-color: rgb(44, 84, 117);   
+    background-color: rgb(45, 77, 104);   
     color: white;   
     border: none;   
     border-radius: 8px; /* Softer border radius */  
@@ -72,7 +77,7 @@ label {
 }  
 
 .p:hover {  
-    background-color: rgb(33, 33, 90);   
+    background-color: rgb(44, 84, 117); 
 }  
 
 .forgot-password {  
