--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ label {
     .left-side {  
         width: 100%;   
         padding: 20px;   
-        align-items: center;   
+        align-items:start;   
     }  
 
     .right-side {  
