--- a/style.css
+++ b/style.css
@@ -126,7 +126,8 @@ label {
 
     .left-side {  
         width: 100%;   
-        padding: 20px;     
+        padding: 20px;   
+        align-items: center;   
     }  
 
     .right-side {  
