clear empty line

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body {  
     margin: 0;  
     font-family: 'Arial', sans-serif; 
-    background: rgb(102, 25, 25); 
+    /*background: rgb(102, 25, 25); */
 }  
 
 .container {  
