--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
     flex: 1; /* Takes half of the width on larger screens */  
     background-color: white;  
     display: flex;  
+    padding-right: 20px;;
     flex-direction: column;  
     /* Center elements vertically */
     justify-content: center;  
