clear empty line

--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ body {
 
 .container {  
     display: flex;  
-    height: 100vh; /* Full height of the viewport */ 
+    height: 100vh; /* Full height of the viewport */
+    background-color: fff; 
 }  
 
 .left-side {  
