--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /*justify-content: center;*/
     align-items: center;
     padding: 20px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
