--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
     text-align: center;
     margin-bottom: 30px;
     font-weight: bold;
-    color: #555;
+    color: black;
 }
 
 form {
