--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ label {
     display: block;
     margin-top: 20px;
     margin-bottom: 5px;
-    color: #333;
+    color: black;
     font-weight: 500;
 }
 
