--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ label {
 .carre {
     width: 100%;
     padding: 12px;
-    border: 2px solid #9dc0e9;
+    border: 1px solid #9dc0e9;
     border-radius: 8px;
     margin-bottom: 5px;
     transition: border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
@@ -72,6 +72,7 @@ label {
 }
 
 .carre:focus {
+    border: 2px solid rgb(28, 174, 231);
     border-color: rgb(28, 174, 231);
     box-shadow: 0 0 10px rgba(13, 110, 253, 0.25);
 }
