--- a/style.css
+++ b/style.css
@@ -73,8 +73,8 @@ label {
 
 .carre:focus {
     border: 4px solid rgb(81, 192, 236);
-    border-color: rgb(28, 174, 231);
-    box-shadow: 0 0 10px rgba(13, 110, 253, 0.25);
+    border-color: #9dc0e9;
+    box-shadow: 0 0 10px rgba(97, 156, 245, 0.25);
 }
 
 .forgot-password {
@@ -103,7 +103,7 @@ label {
 
 .p {
     width: 100%;
-    max-width: 200px;
+    max-width: 150px;
     padding: 14px;
     background-color: rgb(45, 77, 104);
     color: white;
