--- a/wel.css
+++ b/wel.css
@@ -61,3 +61,9 @@ button:hover {
         opacity: 1;
     }
 }
+
+.togetherr{
+    font-style: italic;
+    margin-top: 20px;
+    animation: fadeIn 3s ease-in-out;
+}
